configured cors, setuped front app, added http service

--- a/event_planning_test_api/event_planning_test_api/event_planning_test_api.csproj
+++ b/event_planning_test_api/event_planning_test_api/event_planning_test_api.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\event_planning_test_api.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
