--- a/event_planning_test_api/event_planning_test_api/event_planning_test_api.csproj
+++ b/event_planning_test_api/event_planning_test_api/event_planning_test_api.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\event_planning_test_api.Data\event_planning_test_api.Data.csproj" />
+    <ProjectReference Include="..\event_planning_test_api.Domain\event_planning_test_api.Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\event_planning_test_api.Infrastructure.csproj" />
   </ItemGroup>
 
