--- a/event_planning_test_api/event_planning_test_api.Infrastructure.Data/event_planning_test_api.Infrastructure.Data.csproj
+++ b/event_planning_test_api/event_planning_test_api.Infrastructure.Data/event_planning_test_api.Infrastructure.Data.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\event_planning_test_api.Data\event_planning_test_api.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
