--- a/event_planning_test_api/event_planning_test_api.Domain/event_planning_test_api.Domain.csproj
+++ b/event_planning_test_api/event_planning_test_api.Domain/event_planning_test_api.Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
   </ItemGroup>
 
